--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
     color: #dcdcdc;
     margin: 0;
     padding: 20px;
-    
 }
 
 h1 {
@@ -21,7 +20,8 @@ h1 + p {
     font-size: 1.2em; 
     color: #a1d1f1; 
     text-align: center; 
-    margin-top: 10px; }
+    margin-top: 10px; 
+}
 
 a {
     color: #1f9de8;
@@ -48,10 +48,11 @@ nav ul {
     margin: 0;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 nav li {
-    margin: 0;
+    margin: 5px 0;
 }
 
 nav a {
@@ -83,7 +84,7 @@ nav a:hover {
 }
 
 .skill, .project {
-    width: 48%;
+    width: 100%;
     margin-bottom: 20px;
     padding: 15px;
     background-color: #333;
@@ -103,6 +104,16 @@ nav a:hover {
     display: block; 
     margin-left: auto; 
     margin-right: auto; 
-    width: 1000px; 
+    width: 100%; 
     height: auto; 
-} 
+}
+
+@media (min-width: 768px) {
+    .skill, .project {
+        width: 48%;
+    }
+
+    #logo {
+        width: 1000px;
+    }
+}
